--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Галерея</h1>
     <p>
-        <strong>Ipsum</strong> ipsum dolor sit amet consectetur adipisicing elit. Iusto earum rem consequatur pariatur fugiat. Iste reprehenderit in architecto ab vel, eveniet fuga distinctio dolore ipsa similique expedita laudantium provident voluptate.
+        <strong>Ipsum</strong> ipsum dolor sit amet consectetur adipisicing elit. Iusto earum rem consequatur pariatur fugiat. Iste reprehenderit in architecto ab vel, eveniet fuga distinctio dolore ipsa similique expedita laudantium provident <em>ipsa</em>voluptate.
     </p>
     <a href="pages/galery.html">Галерея</a>
 </body>
