Changed title in galeryl.html

--- a/pages/galery.html
+++ b/pages/galery.html
@@ -4,6 +4,7 @@
     <title>Галерея</title>
 </head>
 <body>
+    <h1>Галерея</h1>
     <img src="../image/chicken.jpg" width="300" height="300">
     <img src="../image/chicken2.jpg"width="300" height="300">
     <img src="../image/chicken3.jpg"width="300" height="300">
