Create a new page contactl.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <strong>Ipsum</strong> ipsum dolor sit amet consectetur adipisicing elit. Iusto earum rem consequatur pariatur fugiat. Iste reprehenderit in architecto ab vel, eveniet fuga distinctio dolore ipsa similique expedita laudantium provident <em>ipsa</em>voluptate.
     </p>
     <a href="pages/galery.html">Галерея</a>
+    <a href="pages/contact.html">Поиск</a>
 </body>
 </html>
