--- a/pages/galery.html
+++ b/pages/galery.html
@@ -10,5 +10,6 @@
     <img src="../image/chicken3.jpg"width="300" height="300">
     <br>
     <a href="../index.html">Главная</a>
+    <a href="contact.html">Контакты</a>
 </body>
 </html>
